corpus/combo.txt
==================
From and Copy
==================

FROM sourcegraph/alpine:3.12@sha256:ce099fbcd3cf70b338fc4cb2a4e1fa9ae847de21afdb0a849a393b87d94fb174 as libsqlite3-pcre

COPY libsqlite3-pcre-install-alpine.sh /libsqlite3-pcre-install-alpine.sh

---

(source_file
	(from_instruction
		(image_spec
			name: (image_name)
		    tag: (image_tag)
		    digest: (image_digest))
		as: (image_alias))
	(copy_instruction
		(path)
		(path)))
