corpus/env.txt
================================================================================
Quoted value
================================================================================

ENV TEST="okay"

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (double_quoted_string))))

================================================================================
Unquoted value
================================================================================

ENV TEST_2=value\ 2

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (unquoted_string))))

=========================================================
Single-letter variable
=========================================================

ENV X=42

---

(source_file
  (env_instruction
    (env_pair
      (unquoted_string)
      (unquoted_string))))

================================================================================
Multiple
================================================================================

ENV TEST="foo" TEST_2=foo\ bar

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (double_quoted_string))
    (env_pair
      name: (unquoted_string)
      value: (unquoted_string))))

================================================================================
Multiline
================================================================================

ENV TEST1="foo" \
	TEST2=bar

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (double_quoted_string))
    (line_continuation)
    (env_pair
      name: (unquoted_string)
      value: (unquoted_string))))

================================================================================
Multiple instructions
================================================================================

ENV TEST1="foo" 
ENV TEST2="bar" 

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (double_quoted_string)))
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (double_quoted_string))))

================================================================================
Space syntax
================================================================================

ENV TEST1 foo

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (unquoted_string))))

================================================================================
Space syntax 2
================================================================================

ENV TZ America/Toronto

--------------------------------------------------------------------------------

(source_file
	(env_instruction
		(env_pair
			name: (unquoted_string)
			value: (unquoted_string))))

================================================================================
Space syntax where value has spaces
================================================================================

ENV BUILD_PACKAGES bash curl

--------------------------------------------------------------------------------

(source_file
	(env_instruction
		(env_pair
			name: (unquoted_string)
      value: (unquoted_string
        (shell_fragment)))))

================================================================================
Space syntax where value has spaces and multiple lines
================================================================================

ENV BUILD_PACKAGES bash curl \
  openssl \
  tar xz gcc python

--------------------------------------------------------------------------------

(source_file
	(env_instruction
		(env_pair
			name: (unquoted_string)
      value: (unquoted_string
        (shell_fragment)
        (line_continuation)
        (shell_fragment)
        (line_continuation)
        (shell_fragment)))))
