corpus/user.txt
==================
No group
==================

USER foo

---

(source_file
	(user_instruction
		user: (unquoted_string)))

==================
With group
==================

USER foo:bar

---

(source_file
	(user_instruction
		user: (unquoted_string)
		group: (unquoted_string)))
		
==================
Numerical
==================

USER 1004:1004

---

(source_file
	(user_instruction
		user: (unquoted_string)
		group: (unquoted_string)))
